--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
             margin: 60px;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XZYGPRJDHT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XZYGPRJDHT');
+</script>
+
 </head>
 <body>
     <div class="background">
