--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Tu Negocio</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" type="text/css" href="https://kdiwebserver.netlify.app/">
+		<link rel="stylesheet" type="text/css" href="estilos2.css">
     <style>
         /* Estilos para los botones de redes sociales */
         .boton-red-social {
@@ -19,7 +21,11 @@
         <img id="logo" src="1.png" alt="Logo de Tu Negocio">
         <h1 id="nombre-negocio">AGENCIA DE PUBLICIDAD DIGITAL</h1>
         <!-- BASE DE DATOS CONTADOR USERS-->
-
+        <h1>Contador de visitas</h1>
+		<div class="visitantes">
+			<p class="numero"><?php echo contar_usuarios()?></p>
+			<p class="texto">Visitas</p>
+		</div>    
         <!--_____________________________________________________-->
         <div id="redes-sociales">
             <!-- Botones de redes sociales -->
