--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <title>Tu Negocio</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
+    <style>
+        /* Estilos para los botones de redes sociales */
+        .boton-red-social {
+            margin: 60px;
+        }
+    </style>
 
 </head>
 <body>
@@ -13,7 +19,7 @@
         <img id="logo" src="1.png" alt="Logo de Tu Negocio">
         <h1 id="nombre-negocio">AGENCIA DE PUBLICIDAD DIGITAL</h1>
         <!-- BASE DE DATOS CONTADOR USERS-->
-
+ 
         <!--_____________________________________________________-->
         <div id="redes-sociales">
             <!-- Botones de redes sociales -->
