--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <title>Tu Negocio</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
@@ -9,15 +9,18 @@
             margin: 60px;
         }
     </style>
+
 </head>
 <body>
     <div class="background">
-
     </div>
     <div class="leaf">
         <!-- Contenido dentro de .leaf -->
         <img id="logo" src="1.png" alt="Logo de Tu Negocio">
         <h1 id="nombre-negocio">AGENCIA DE PUBLICIDAD DIGITAL</h1>
+        <!-- BASE DE DATOS CONTADOR USERS-->
+ 
+        <!--_____________________________________________________-->
         <div id="redes-sociales">
             <!-- Botones de redes sociales -->
             <a class="boton-red-social" href="https://www.facebook.com/kdi.publicidad/?locale=es_LA">
@@ -34,40 +37,44 @@
             </a>
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234.62096710503442!2d-99.10183307614139!3d19.80033302656175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d18bad84b2bfe5%3A0x1e17c974fe5d7476!2sKdi%20Agencia%20De%20Publicidad!5e0!3m2!1ses-419!2smx!4v1697483265127!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <table>
-        <tr><div id="productos"><h1>TODO EN UN MISMO LUGAR</h1></div></tr>
+        <table border="4" bgcolor="pink">
+        <div id="productos">TODO EN UN MISMO LUGAR
             <tr>
                 <td>
-                <h1><li>Lonas-Tarjetas</li></h1>
-                <h1><li>Imánes</li></h1>
-                <h1><li>Notas de remision</li></h1>
-                <h1><li>Recetas-Carnet</li></h1>
-                <h1><li>Hoja membretada</li></h1>
-                <h1><li>Menús-Sellos</li></h1>
-                <h1><li>Calendarios</li></h1>
-                <h1><li>Pluma-Carpetas</li></h1>
-                <h1><li>Corte de vinil</li></h1>
-                <h1><li>Vinil impreso</li></h1>
-                <h1><li>Impresion digital</li></h1>
-                <h1><li>Vasos para eventos</li></h1>
+                <h1 style="color:#000000"><li>Lonas-Tarjetas</li></h1>
+                <h1 style="color:#ff0000"><li>Imánes</li></h1>
+                <h1 style="color:#ff0000"><li>Notas de remision</li></h1>
+                <h1 style="color:#000000"><li>Recetas-Carnet</li></h1>
+                <h1 style="color:#ff0000"><li>Hoja membretada</li></h1>
+                <h1 style="color:#000000"><li>Menús-Sellos</li></h1>
+                <h1 style="color:#ff0000"><li>Calendarios</li></h1>
+                <h1 style="color:#000000"><li>Pluma-Carpetas</li></h1>
+                <h1 style="color:#ff0000"><li>Corte de vinil</li></h1>
+                <h1 style="color:#ff0000"><li>Vinil impreso</li></h1>
+                <h1 style="color:#ff0000"><li>Impresion digital</li></h1>
+                <h1 style="color:#ff0000"><li>Vasos para eventos</li></h1>
                 </td>
                 <td>
-                <h1><li>Playeras-Gorras</li></h1>
-                <h1><li>Sudaderas-Mandiles</li></h1>
-                <h1><li>Cojines-Cristales</li></h1>
-                <h1><li>Rompecabezas</li></h1>
-                <h1><li>Mouse pad-Llaveros</li></h1>
-                <h1><li>Invitaciones</li></h1>
-                <h1><li>Dulceros-Bolsas</li></h1>
-                <h1><li>Tazas-Termos</li></h1>
-                <h1><li>Cilindros</li></h1>
-                <h1><li>Cubrebocas</li></h1>
-                <h1><br></h1>
-                <h1><br></h1>
+                <h1 style="color:#000000"><li>Playeras-Gorras</li></h1>
+                <h1 style="color:#000000"><li>Sudaderas-Mandiles</li></h1>
+                <h1 style="color:#000000"><li>Cojines-Cristales</li></h1>
+                <h1 style="color:#ff0000"><li>Rompecabezas</li></h1>
+                <h1 style="color:#000000"><li>Mouse pad-Llaveros</li></h1>
+                <h1 style="color:#ff0000"><li>Invitaciones</li></h1>
+                <h1 style="color:#000000"><li>Dulceros-Bolsas</li></h1>
+                <h1 style="color:#000000"><li>Tazas-Termos</li></h1>
+                <h1 style="color:#ff0000"><li>Cilindros</li></h1>
+                <h1 style="color:#ff0000"><li>Cubrebocas</li></h1>
+                <h1 style="color:#ff0000"><br></h1>
+                <h1 style="color:#ff0000"><br></h1>
                 </td>
             </tr>
-            
+        </div>
         <!----------------------->
         </table>
+        <div class="ad-container" id="adContainer">
+            <img src="p1.jpg" alt="Anuncio publicitario" id="adImage">
+        </div>
+        <script src="script.js"></script> <!---conexion javascript-->
   </body>
 </html>
