--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="redes-sociales">
             <!-- Botones de redes sociales -->
             <a class="boton-red-social" href="https://www.facebook.com/kdi.publicidad/?locale=es_LA">
-                <img src="gif1.gif" alt="Facebook"><br>
+                <img src="f2.png" alt="Facebook"><br>
             </a>
             <a class="boton-red-social" href="https://www.instagram.com/kdi.Publicidad/?fbclid=IwAR0DdrafqBkT3zp90455gAorEVAS1IbF_nsrnngUH-lfLGmCWAsslpUZ2Eo">
                 <img src="i2.png" alt="Instagram"><br>
