--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
             margin: 60px;
         }
     </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
-<body bgcolor="black">
+<body >
 
 </body>
 <body>
