--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
             margin: 60px;
         }
     </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
+<body >
+
+</body>
 <body>
     <div class="background">
     </div>
