--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tu Negocio</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <style>
@@ -12,9 +14,14 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
-<body >
-
+<!-- fondo animado*/ -->
+<body>
+    <div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
+</div>
 </body>
+<!-- ------------- -->
 <body>
     <div class="background">
     </div>
