--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             margin: 60px;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 <!-- fondo animado*/ -->
@@ -46,7 +45,7 @@
         <div id="productos">TODO EN UN MISMO LUGAR</div>
         <!----------------------->
         <div class="contenedor">
-        <img id="portada" class="post1" alt="imagen" src="port1.png">
+        <img id="portada" class="post1" alt="imagen" src="port1.png" height="900" width="600">
         <div class="recuadro"></div>
         </div>
         <!----------------------->
