--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="productos">TODO EN UN MISMO LUGAR</div>
         <!----------------------->
         <div class="contenedor">
-        <img id="portada" class="post1" alt="imagen" src="port1.png" height="900" width="600">
+        <img id="portada" class="post1" alt="imagen" src="port1.png">
         <div class="recuadro"></div>
         </div>
         <!----------------------->
