--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tu Negocio</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <style>
@@ -14,9 +12,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
-<!-- fondo animado*/ -->
+<body >
 
-<!-- ------------- -->
+</body>
 <body>
     <div class="background">
     </div>
@@ -25,7 +23,7 @@
         <img id="logo" src="1.png" alt="Logo de Tu Negocio">
         <h1 id="nombre-negocio">AGENCIA DE PUBLICIDAD DIGITAL</h1>
         <!-- BASE DE DATOS CONTADOR USERS-->
-        <div class="bg"></div>
+ 
         <!--_____________________________________________________-->
         <div id="redes-sociales">
             <!-- Botones de redes sociales -->
