--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tu Negocio</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <style>
@@ -9,12 +11,11 @@
             margin: 60px;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
-<body >
+<!-- fondo animado*/ -->
 
-</body>
+<!-- ------------- -->
 <body>
     <div class="background">
     </div>
@@ -23,7 +24,7 @@
         <img id="logo" src="1.png" alt="Logo de Tu Negocio">
         <h1 id="nombre-negocio">AGENCIA DE PUBLICIDAD DIGITAL</h1>
         <!-- BASE DE DATOS CONTADOR USERS-->
- 
+        <div class="bg"></div>
         <!--_____________________________________________________-->
         <div id="redes-sociales">
             <!-- Botones de redes sociales -->
@@ -41,41 +42,13 @@
             </a>
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234.62096710503442!2d-99.10183307614139!3d19.80033302656175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d18bad84b2bfe5%3A0x1e17c974fe5d7476!2sKdi%20Agencia%20De%20Publicidad!5e0!3m2!1ses-419!2smx!4v1697483265127!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <table border="4" bgcolor="pink">
-        <div id="productos">TODO EN UN MISMO LUGAR
-            <tr>
-                <td>
-                <h1 style="color:#000000"><li>Lonas-Tarjetas</li></h1>
-                <h1 style="color:#ff0000"><li>Imánes</li></h1>
-                <h1 style="color:#ff0000"><li>Notas de remision</li></h1>
-                <h1 style="color:#000000"><li>Recetas-Carnet</li></h1>
-                <h1 style="color:#ff0000"><li>Hoja membretada</li></h1>
-                <h1 style="color:#000000"><li>Menús-Sellos</li></h1>
-                <h1 style="color:#ff0000"><li>Calendarios</li></h1>
-                <h1 style="color:#000000"><li>Pluma-Carpetas</li></h1>
-                <h1 style="color:#ff0000"><li>Corte de vinil</li></h1>
-                <h1 style="color:#ff0000"><li>Vinil impreso</li></h1>
-                <h1 style="color:#ff0000"><li>Impresion digital</li></h1>
-                <h1 style="color:#ff0000"><li>Vasos para eventos</li></h1>
-                </td>
-                <td>
-                <h1 style="color:#000000"><li>Playeras-Gorras</li></h1>
-                <h1 style="color:#000000"><li>Sudaderas-Mandiles</li></h1>
-                <h1 style="color:#000000"><li>Cojines-Cristales</li></h1>
-                <h1 style="color:#ff0000"><li>Rompecabezas</li></h1>
-                <h1 style="color:#000000"><li>Mouse pad-Llaveros</li></h1>
-                <h1 style="color:#ff0000"><li>Invitaciones</li></h1>
-                <h1 style="color:#000000"><li>Dulceros-Bolsas</li></h1>
-                <h1 style="color:#000000"><li>Tazas-Termos</li></h1>
-                <h1 style="color:#ff0000"><li>Cilindros</li></h1>
-                <h1 style="color:#ff0000"><li>Cubrebocas</li></h1>
-                <h1 style="color:#ff0000"><br></h1>
-                <h1 style="color:#ff0000"><br></h1>
-                </td>
-            </tr>
+        <div id="productos">TODO EN UN MISMO LUGAR</div>
+        <!----------------------->
+        <div class="contenedor">
+        <img id="portada" class="post1" alt="imagen" src="port1.png" height="900" width="600">
+        <div class="recuadro"></div>
         </div>
         <!----------------------->
-        </table>
         <div class="ad-container" id="adContainer">
             <img src="p1.jpg" alt="Anuncio publicitario" id="adImage">
         </div>
