--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div id="productos">TODO EN UN MISMO LUGAR</div>
         <!----------------------->
         <div class="contenedor">
-            <img id="portada" class="post1" alt="imagen" src="port1.png">
+            <img id="portada" class="post1" alt="imagen" src="port1.png" width="400px" height="550px">
             <div class="recuadro"></div>
         </div>
         <!----------------------->
