--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <style>
         /* Estilos para los botones de redes sociales */
-        .boton-red-social {
+        .facebook {
+            margin: 60px;
+        }
+        .instagram {
+            margin: 60px;
+        }
+        .whatsapp {
+            margin: 60px;
+        }
+        .tiktok {
             margin: 60px;
         }
     </style>
@@ -23,16 +32,16 @@
         <!--_____________________________________________________-->
         <div id="redes-sociales">
             <!-- Botones de redes sociales -->
-            <a class="boton-red-social" href="https://www.facebook.com/kdi.publicidad/?locale=es_LA">
+            <a class="facebook" href="https://www.facebook.com/kdi.publicidad/?locale=es_LA">
                 <img src="f2.png" alt="Facebook"><br>
             </a>
-            <a class="boton-red-social" href="https://www.instagram.com/kdi.Publicidad/?fbclid=IwAR0DdrafqBkT3zp90455gAorEVAS1IbF_nsrnngUH-lfLGmCWAsslpUZ2Eo">
+            <a class="instagram" href="https://www.instagram.com/kdi.Publicidad/?fbclid=IwAR0DdrafqBkT3zp90455gAorEVAS1IbF_nsrnngUH-lfLGmCWAsslpUZ2Eo">
                 <img src="i2.png" alt="Instagram"><br>
             </a>
-            <a class="boton-red-social" href="https://api.whatsapp.com/send?phone=%2B525535246114&data=ARByCOZUfWu3cyz0eeT_KC44MftDYjSUo4jQGvCdhcNOhva6wVuaZRajXS-YsnMJzyUr7xn95TDdwItnLy5q1DQdgGLqYtmrBOScVt9UudcLUvM0fuJMUp_gRFUybwyPDMtndsVkUM2IFhIUpKmySdvuHw&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwAR2KNzDZdZDafARmtsX9SBvhARB8RnZNEfaQ2laNboNGbO8Gmspgz_MXZf4">
+            <a class="whatsapp" href="https://api.whatsapp.com/send?phone=%2B525535246114&data=ARByCOZUfWu3cyz0eeT_KC44MftDYjSUo4jQGvCdhcNOhva6wVuaZRajXS-YsnMJzyUr7xn95TDdwItnLy5q1DQdgGLqYtmrBOScVt9UudcLUvM0fuJMUp_gRFUybwyPDMtndsVkUM2IFhIUpKmySdvuHw&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwAR2KNzDZdZDafARmtsX9SBvhARB8RnZNEfaQ2laNboNGbO8Gmspgz_MXZf4">
                 <img src="w2.png" alt="WhatsApp"><br>
             </a>
-            <a class="boton-red-social" href="https://www.tiktok.com/@kdi.publicidad?_t=8galNdaksKb&_r=1">
+            <a class="tiktok" href="https://www.tiktok.com/@kdi.publicidad?_t=8galNdaksKb&_r=1">
                 <img src="t2.png" alt="TikTok"><br>
             </a>
         </div>
