--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
 </head>
 <body>
-    <div class="background">
-    </div>
+    <div class="bg"></div>
     <div class="tpl-snow">
         <div></div>
         <div></div>
@@ -106,6 +105,9 @@
         <div class="ad-container" id="adContainer">
             <img src="p1.jpg" alt="Anuncio publicitario" id="adImage">
         </div>
+        <div class="java-container" id="javas">
         <script src="script.js"></script> <!---conexion javascript-->
+        <div class="recuadro2"></div>
+        </div>
   </body>
 </html>
