--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="leaf">
         <!-- Contenido dentro de .leaf -->
-        <img id="logo" src="2.png" alt="Logo de Tu Negocio">
+        <img id="logo" src="2log.png" alt="Logo de Tu Negocio">
         <h1 id="nombre-negocio">AGENCIA DE PUBLICIDAD DIGITAL</h1>
         <!-- BASE DE DATOS CONTADOR USERS-->
  
