--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
             <div class="recuadro"></div>
         </div>
         <!----------------------->
-
+        <audio>
+            <source src="son1.mp3" type="audio/mpeg">
+            <source src="son2.mp3" type="audio/mpeg">
+            Tu navegador no es compatible
+        </audio>
   </body>
 </html>
