--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 
 </head>
-<body>
+<body onclick="PlayAudio()">
     <div class="bg"></div>
     <div class="tpl-snow">
         <div></div>
@@ -102,10 +102,14 @@
             <div class="recuadro"></div>
         </div>
         <!----------------------->
-        <audio>
+        <audio id="son1" controls loop>
             <source src="son1.mp3" type="audio/mpeg">
-            <source src="son2.mp3" type="audio/mpeg">
-            Tu navegador no es compatible
         </audio>
+    <script>
+        function PlayAudio(){
+            document.getElementById("son1").play();
+        }
+    </script>
   </body>
+
 </html>
