--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="recuadro"></div>
         </div>
         <!----------------------->
-        <audio id="son1" controls loop>
+        <audio id="son1" loop>
             <source src="son1.mp3" type="audio/mpeg">
         </audio>
     <script>
