--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Background Animation</title>
+  <title>Background Effect</title>
   <link rel="stylesheet" media="all" href="style.css" />
 </head>
 <body>
-<div class="hero"> 
-  <div class="hero__title"></div>
-  <div class="cube"></div>
-  <div class="cube"></div>
-  <div class="cube"></div>
-  <div class="cube"></div>
-  <div class="cube"></div>
-  <div class="cube"></div>
+<div class="lines">
+  <div class="line"></div>
+  <div class="line"></div>
+  <div class="line"></div>
 </div>
 </body>
 </html>
