--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1><center><font color="black pink"><p1>prueba pagina web laser</p></font></center></h1>
     </head>
     <section class="main">
-      <img src="perfil.png">
+      <img src="perfil.jpeg">
       <p>
         Las compuertas lógicas son dispositivos electrónicos que realizan funciones booleanas, como sumar, restar, incluir o excluir, según sus propiedades lógicas. Se utilizan en tecnología electrónica, eléctrica, mecánica, hidráulica y neumática. 
 Las compuertas lógicas están compuestas por transistores, que son interruptores electrónicos que pueden estar en posición de "encendido" (1) o "apagado" (0). Los transistores están conectados de manera que realizan la operación lógica deseada basándose en las entradas. 
