--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body onclick="PlayAudio()"></body>
   <div class="contenedor">
     <head>
-    <h1><center><font color="black pink"><p1>prueba pagina web laser</p></font></center></h1>
+    <h1><center><font color="black pink"><p1>CORTE Y GRABADO LASER </p></font></center></h1>
     </head>
     <section class="main">
       <img src="perfil.jpeg">
@@ -36,7 +36,7 @@ Compuerta NAND: Produce una salida falsa solamente si todas sus entradas son
     </aside>
     </div>
     <audio id="son1" loop>
-      <source src="son2.mp3" type="audio/mpeg">
+      <source src="4.mp3" type="audio/mpeg">
   </audio>
 <script>
   function PlayAudio(){
