--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     </head>
     <section class="main">
       <img src="perfil.jpeg">
-      <p>
+      <p class="tex1">
         Las compuertas lógicas son dispositivos electrónicos que realizan funciones booleanas, como sumar, restar, incluir o excluir, según sus propiedades lógicas. Se utilizan en tecnología electrónica, eléctrica, mecánica, hidráulica y neumática. 
 Las compuertas lógicas están compuestas por transistores, que son interruptores electrónicos que pueden estar en posición de "encendido" (1) o "apagado" (0). Los transistores están conectados de manera que realizan la operación lógica deseada basándose en las entradas. 
 Algunos ejemplos de compuertas lógicas son: 
@@ -326,7 +326,7 @@ Compuerta NAND: Produce una salida falsa solamente si todas sus entradas son
       </p>
     </section>
     <aside>
-      <p>
+      <p class="tex2">
         Las compuertas lógicas son dispositivos electrónicos que realizan funciones booleanas, como sumar, restar, incluir o excluir, según sus propiedades lógicas. Se utilizan en tecnología electrónica, eléctrica, mecánica, hidráulica y neumática. 
 Las compuertas lógicas están compuestas por transistores, que son interruptores electrónicos que pueden estar en posición de "encendido" (1) o "apagado" (0). Los transistores están conectados de manera que realizan la operación lógica deseada basándose en las entradas. 
 Algunos ejemplos de compuertas lógicas son: 
