--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src='main.js'></script>
   <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
 </head>
+<body class="fondo">
 <body>
   <body onclick="PlayAudio()"></body>
   <div class="circle-container">
@@ -312,7 +313,7 @@
   </div>
   <div class="contenedor">
     <head>
-    <h1><center><font color="black pink"><p1 class="texto">CORTE Y GRABADO LASER</p></font></center></h1>
+    <h1><center><font color="black pink"><p1 class="titulo">CORTE Y GRABADO LASER</p></font></center></h1>
     </head>
     <section class="main">
       <img src="perfil.jpeg">
@@ -345,4 +346,5 @@ Compuerta NAND: Produce una salida falsa solamente si todas sus entradas son
   }
 </script>
 </body>
-</html></html>
+</body>
+</html>
