--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@
   </div>
   <div class="contenedor">
     <head>
-    <h1><center><font color="black pink"><p1 class="titulo">CORTE Y GRABADO LASER</p></font></center></h1>
+    <h1><center><font color="black pink"><p1 class="titulo">CORTE Y GRABADO</p1><p class="titulo">LASER</p></font></center></h1>
+    <h3 class="BIENVENIDO">B I E N V E N I D O</h3>
     </head>
     <section class="main">
       <img src="perfil.jpeg">
