--- a/index.html
+++ b/index.html
@@ -316,6 +316,24 @@
     <h1><center><p1 class="titulo">CORTE Y GRABADO</p1><p class="titulo">LASER</p></center></h1>
     <h3 class="BIENVENIDO">B I E N V E N I D O</h3>
     </head>
+    <div class="contenedortabla">
+      <table>
+        <thead>
+        <tr><!--columnas abajo-->
+        <td>hola</td><!--td derecha filas--->
+        <td>hola</td>
+        <td>hola</td><!--td derecha filas--->
+        <td>hola</td>
+        <td>hola</td><!--td derecha filas--->
+        <td>hola</td>
+      </tr>
+    </thead>
+  
+      <tr>
+        <td>hola</td>
+      </tr>
+      </table>
+    </div> 
     <section class="main">
          <!----------------------->
    <div class="ad-container" id="adContainer">
@@ -323,16 +341,14 @@
 </div>
 <script src="script.js"></script> <!---conexion javascript-->
 <!--------------------------------------------------------------------->
-  <    <p class="tex1">
+ <p class="tex1">
         Las compuertas lógicas son dispositivos electrónicos que realizan funciones booleanas, como sumar, restar, incluir o excluir, según sus propiedades lógicas. Se utilizan en tecnología electrónica, eléctrica, mecánica, hidráulica y neumática. 
 Las compuertas lógicas están compuestas por transistores, que son interruptores electrónicos que pueden estar en posición de "encendido" (1) o "apagado" (0). Los transistores están conectados de manera que realizan la operación lógica deseada basándose en las entradas. 
 Algunos ejemplos de compuertas lógicas son: 
 Compuerta NOT: También llamada inversora, produce como salida el valor invertido de su entrada. 
 Compuerta AND: También conocida como Y, realiza la función booleana de producto lógico. 
 Compuerta NAND: Produce una salida falsa solamente si todas sus entradas son
-      </p>>
-      <img src="perfil.jpeg">
-      <img src="perfil.jpeg">
+      </p>
     </section>
     <aside>
       <p class="tex2">
