--- a/index.html
+++ b/index.html
@@ -311,29 +311,28 @@
   <div class="circle-container">
     <div class="circle"></div>
   </div>
+  <!----------------inicio de pagina---------------->
   <div class="contenedor">
     <head>
     <h1><center><p1 class="titulo">CORTE Y GRABADO</p1><p class="titulo">LASER</p></center></h1>
     <h3 class="BIENVENIDO">B I E N V E N I D O</h3>
     </head>
-    <div class="contenedortabla">
-      <table>
-        <thead>
-        <tr><!--columnas abajo-->
-        <td>hola</td><!--td derecha filas--->
-        <td>hola</td>
-        <td>hola</td><!--td derecha filas--->
-        <td>hola</td>
-        <td>hola</td><!--td derecha filas--->
-        <td>hola</td>
+<!----------tabla---------------->
+      <table class="contenedortabla">
+    <thead>  
+      <tr><!--columnas abajo-->
+        <td><img src="3.gif" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><img src="3.gif" height="100px" width="100px"></td>
+        <td><img src="3.gif" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><img src="3.gif" height="100px" width="100px"></td>
+        <td><img src="3.gif" height="100px" width="100px"></td><!--td derecha filas--->
       </tr>
     </thead>
-  
       <tr>
         <td>hola</td>
       </tr>
-      </table>
-    </div> 
+      </table> 
+<!----------final tabla---------------->
     <section class="main">
          <!----------------------->
    <div class="ad-container" id="adContainer">
