--- a/index.html
+++ b/index.html
@@ -329,7 +329,11 @@
       </tr>
     </thead>
       <tr>
-        <td>hola</td>
+        <td><img src="1.gif" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><img src="2.gif" height="100px" width="100px"></td>
+        <td><img src="1.gif" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><img src="2.gif" height="100px" width="100px"></td>
+        <td><img src="1.gif" height="100px" width="100px"></td><!--td derecha filas--->
       </tr>
       </table> 
 <!----------final tabla---------------->
