--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Page Title</title>
+  <title>CORTE Y GRABADO LASER GABO</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">  <link rel='stylesheet' type='text/css' media='screen' href='estilos.css'>
   <script src='main.js'></script>
   <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
@@ -324,13 +324,8 @@
         <td><img src="3.gif" height="100px" width="100px"></td><!--td derecha filas--->
         <td><img src="3.gif" height="100px" width="100px"></td>
         <td><img src="3.gif" height="100px" width="100px"></td><!--td derecha filas--->
-        <td><img src="3.gif" height="100px" width="100px"></td>
-        <td><img src="3.gif" height="100px" width="100px"></td><!--td derecha filas--->
-      </tr>
     </thead>
       <tr>
-        <td><img src="1.gif" height="100px" width="100px"></td><!--td derecha filas--->
-        <td><img src="2.gif" height="100px" width="100px"></td>
         <td><img src="1.gif" height="100px" width="100px"></td><!--td derecha filas--->
         <td><img src="2.gif" height="100px" width="100px"></td>
         <td><img src="1.gif" height="100px" width="100px"></td><!--td derecha filas--->
@@ -338,6 +333,7 @@
       </table> 
 <!----------final tabla---------------->
     <section class="main">
+      <img src="perfil.jpeg">
          <!----------------------->
    <div class="ad-container" id="adContainer">
     <img src="p1.jpg" alt="Anuncio publicitario" id="adImage">
