--- a/index.html
+++ b/index.html
@@ -321,14 +321,14 @@
       <table class="contenedortabla">
     <thead>  
       <tr><!--columnas abajo-->
-        <td><img src="3.gif" height="100px" width="100px"></td><!--td derecha filas--->
-        <td><img src="3.gif" height="100px" width="100px"></td>
-        <td><img src="3.gif" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><img src="p2.jpg" height="100px" width="100px"></td>
+        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
     </thead>
       <tr>
-        <td><img src="1.gif" height="100px" width="100px"></td><!--td derecha filas--->
-        <td><img src="2.gif" height="100px" width="100px"></td>
-        <td><img src="1.gif" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><img src="p2.jpg" height="100px" width="100px"></td>
+        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
       </tr>
       </table> 
 <!----------final tabla---------------->
