--- a/index.html
+++ b/index.html
@@ -321,7 +321,10 @@
       <table class="contenedortabla">
     <thead>  
       <tr><!--columnas abajo-->
-        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
+        <td>   <div class="ad-container" id="adContainer">
+          <img src="imgproductos/1.jpg" alt="Anuncio publicitario" id="adImage">
+      </div>
+      <script src="script.js"></script> <!---conexion javascript--></td><!--td derecha filas--->
         <td><img src="p2.jpg" height="100px" width="100px"></td>
         <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
     </thead>
