--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body class="fondo">
 <body>
   <body onclick="PlayAudio()"></body>
+  <!----------------------------------------------------------------->
   <div class="circle-container">
     <div class="circle"></div>
   </div>
@@ -321,10 +322,7 @@
       <table class="contenedortabla">
     <thead>  
       <tr><!--columnas abajo-->
-        <td>   <div class="ad-container" id="adContainer">
-          <img src="imgproductos/1.jpg" alt="Anuncio publicitario" id="adImage">
-      </div>
-      <script src="script.js"></script> <!---conexion javascript--></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="p2.jpg" height="100px" width="100px" alt=""></a></td>
         <td><img src="p2.jpg" height="100px" width="100px"></td>
         <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
     </thead>
@@ -338,10 +336,9 @@
     <section class="main">
       <img src="perfil.jpeg">
          <!----------------------->
-   <div class="ad-container" id="adContainer">
-    <img src="p1.jpg" alt="Anuncio publicitario" id="adImage">
-</div>
-<script src="script.js"></script> <!---conexion javascript-->
+          <div class="ad-container" id="adContainer">
+          <img src="imgproductos/1.jpg" alt="Anuncio publicitario" id="adImage">
+          </div>
 <!--------------------------------------------------------------------->
  <p class="tex1">
         Las compuertas lógicas son dispositivos electrónicos que realizan funciones booleanas, como sumar, restar, incluir o excluir, según sus propiedades lógicas. Se utilizan en tecnología electrónica, eléctrica, mecánica, hidráulica y neumática. 
@@ -371,6 +368,7 @@ Compuerta NAND: Produce una salida falsa solamente si todas sus entradas son
       document.getElementById("son1").play();
   }
 </script>
+<script src="script.js"></script> <!---conexion javascript-->
 </body>
 </body>
 </html>
