--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
   <!----------------inicio de pagina---------------->
   <div class="contenedor">
     <head>
-    <h1><center><p1 class="titulo">CORTE Y GRABADO</p1><p class="titulo">LASER</p></center></h1>
-    <h3 class="BIENVENIDO">B I E N V E N I D O</h3>
+    <h1><center><p1 class="titulo">BIENVENIDO</p></center></h1>
+    <h3 class="BIENVENIDO">CORTE LASER</h3>
     </head>
 <!----------tabla---------------->
       <table class="contenedortabla">
@@ -333,13 +333,6 @@
       </tr>
       </table> 
 <!----------final tabla---------------->
-    <section class="main">
-      <img src="perfil.jpeg">
-         <!----------------------->
-          <div class="ad-container" id="adContainer">
-          <img src="imgproductos/1.jpg" alt="Anuncio publicitario" id="adImage">
-          </div>
-<!--------------------------------------------------------------------->
  <p class="tex1">
         Las compuertas lógicas son dispositivos electrónicos que realizan funciones booleanas, como sumar, restar, incluir o excluir, según sus propiedades lógicas. Se utilizan en tecnología electrónica, eléctrica, mecánica, hidráulica y neumática. 
 Las compuertas lógicas están compuestas por transistores, que son interruptores electrónicos que pueden estar en posición de "encendido" (1) o "apagado" (0). Los transistores están conectados de manera que realizan la operación lógica deseada basándose en las entradas. 
@@ -368,6 +361,13 @@ Compuerta NAND: Produce una salida falsa solamente si todas sus entradas son
       document.getElementById("son1").play();
   }
 </script>
+<section class="main">
+  <img src="perfil.jpeg">
+     <!----------------------->
+      <div class="ad-container" id="adContainer">
+      <img src="imgproductos/1.jpg" alt="Anuncio publicitario" id="adImage">
+      </div>
+<!--------------------------------------------------------------------->
 <script src="script.js"></script> <!---conexion javascript-->
 </body>
 </body>
