--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
   <!----------------inicio de pagina---------------->
   <div class="contenedor">
     <head>
-    <h1><center><p1 class="titulo">BIENVENIDO</p></center></h1>
+    <h1><center><p1 class="titulo">CORTE Y GRABADO LASER</p></center></h1>
     <h3 class="BIENVENIDO">CORTE LASER</h3>
     </head>
 <!----------tabla---------------->
