--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
   <!----------------inicio de pagina---------------->
   <div class="contenedor">
     <head>
-    <h1><center><p1 class="titulo">CORTE Y GRABADO LASER</p></center></h1>
-    <h3 class="BIENVENIDO">CORTE LASER</h3>
+    <h1><center><p1 class="titulo">CORTE Y grabado</p1><p class="titulo">LASER</p></center></h1>
+    <h3 class="BIENVENIDO">B I E N V E N I D O</h3>
     </head>
 <!----------tabla---------------->
       <table class="contenedortabla">
@@ -331,27 +331,24 @@
         <td><img src="p2.jpg" height="100px" width="100px"></td>
         <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
       </tr>
+      <tr>
+        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><img src="p2.jpg" height="100px" width="100px"></td>
+        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><img src="p2.jpg" height="100px" width="100px"></td>
+        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
+      </tr>
       </table> 
 <!----------final tabla---------------->
- <p class="tex1">
-        Las compuertas lógicas son dispositivos electrónicos que realizan funciones booleanas, como sumar, restar, incluir o excluir, según sus propiedades lógicas. Se utilizan en tecnología electrónica, eléctrica, mecánica, hidráulica y neumática. 
-Las compuertas lógicas están compuestas por transistores, que son interruptores electrónicos que pueden estar en posición de "encendido" (1) o "apagado" (0). Los transistores están conectados de manera que realizan la operación lógica deseada basándose en las entradas. 
-Algunos ejemplos de compuertas lógicas son: 
-Compuerta NOT: También llamada inversora, produce como salida el valor invertido de su entrada. 
-Compuerta AND: También conocida como Y, realiza la función booleana de producto lógico. 
-Compuerta NAND: Produce una salida falsa solamente si todas sus entradas son
-      </p>
+         <!----------------------->
+          <div class="ad-container" id="adContainer">
+          <img src="imgproductos/1.jpg" alt="Anuncio publicitario" id="adImage">
+          </div>
+<!--------------------------------------------------------------------->
     </section>
-    <aside>
-      <p class="tex2">
-        Las compuertas lógicas son dispositivos electrónicos que realizan funciones booleanas, como sumar, restar, incluir o excluir, según sus propiedades lógicas. Se utilizan en tecnología electrónica, eléctrica, mecánica, hidráulica y neumática. 
-Las compuertas lógicas están compuestas por transistores, que son interruptores electrónicos que pueden estar en posición de "encendido" (1) o "apagado" (0). Los transistores están conectados de manera que realizan la operación lógica deseada basándose en las entradas. 
-Algunos ejemplos de compuertas lógicas son: 
-Compuerta NOT: También llamada inversora, produce como salida el valor invertido de su entrada. 
-Compuerta AND: También conocida como Y, realiza la función booleana de producto lógico. 
-Compuerta NAND: Produce una salida falsa solamente si todas sus entradas son
-      </p>
-    </aside>
     </div>
     <audio id="son1" loop>
       <source src="nav2.mp3" type="audio/mpeg">
@@ -361,7 +358,7 @@ Compuerta NAND: Produce una salida falsa solamente si todas sus entradas son
       document.getElementById("son1").play();
   }
 </script>
-
+<script src="script.js"></script> <!---conexion javascript-->
 </body>
 </body>
 </html>
